TINY-14028: dark mode fixes (#10986)

--- a/modules/oxide/src/less/theme/components/ai-chat/ai-chat.less
+++ b/modules/oxide/src/less/theme/components/ai-chat/ai-chat.less
@@ -24,6 +24,7 @@
   .tox-sidebar-content__header {
     border: var(--tox-private-tinymceai-focus-border-width, @tinymceai-focus-border-width) solid var(--tox-private-background-color, @background-color);
     padding: calc(var(--tox-private-pad-sm, @pad-sm) - var(--tox-private-tinymceai-focus-border-width, @tinymceai-focus-border-width)) calc(12px - var(--tox-private-tinymceai-focus-border-width, @tinymceai-focus-border-width));
+    border-bottom: 1px solid var(--tox-private-separator-color, @tinymce-separator-color);
 
     &:focus-visible:not(:disabled) {
        border: var(--tox-private-tinymceai-focus-border-width, @tinymceai-focus-border-width) solid var(--tox-private-color-tint, @color-tint);
@@ -216,7 +217,7 @@
     flex-wrap: wrap;
 
     .tox-tag {
-      border: 1px solid var(--tox-private-border-color, @border-color);
+      border: 1px solid var(--tox-private-separator-color, @tinymce-separator-color);
       background-color: transparent;
       max-width: 132px;
       max-height: 24px;
@@ -269,7 +270,12 @@
   .tox-ai-error {
     border-radius: var(--tox-private-panel-border-radius, @panel-border-radius);
     border: 1px solid var(--tox-private-color-error, @color-error);
-    background: linear-gradient(0deg, rgba(from var(--tox-private-color-white, @color-white) r g b / 0.9) 0%,  rgba(from var(--tox-private-color-white, @color-white) r g b / 0.9) 100%), var(--tox-private-color-error, @color-error);
+    background: linear-gradient(
+        0deg,
+        rgba(from var(--tox-private-background-color, @background-color) r g b / 0.9) 0%,
+        rgba(from var(--tox-private-background-color, @background-color) r g b / 0.9) 100%
+      ),
+      var(--tox-private-color-error, @color-error);
     padding: var(--tox-private-pad-sm, @pad-sm);
     width: 100%;
     display: flex;
@@ -294,7 +300,7 @@
     flex-direction: column;
 
     border: var(--tox-private-tinymceai-focus-border-width, @tinymceai-focus-border-width) solid var(--tox-private-background-color, @background-color);
-    border-top: 1px solid var(--tox-private-neutral-20, darken(@background-color, 11%));
+    border-top: 1px solid var(--tox-private-separator-color, @tinymce-separator-color);
 
     &:focus-visible:not(:disabled) {
        border: var(--tox-private-tinymceai-focus-border-width, @tinymceai-focus-border-width) solid var(--tox-private-color-tint, @color-tint);
