--- a/modules/oxide/src/less/theme/components/ai-preview/ai-preview.less
+++ b/modules/oxide/src/less/theme/components/ai-preview/ai-preview.less
@@ -30,8 +30,8 @@
 
     .tox-ai__preview-footer {
       flex: 0 0 auto;
-      background: @color-white;
-      border-top: 1px solid hsl(from var(--tox-color-white, @color-white) h s calc(l - 11));
+      background: var(--tox-private-background-color, @background-color);
+      border-top: 1px solid @border-color-light;
 
 
       .tox-ai__preview-footer-toolbar {
